# Time-Machine-Cleanup

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  Changes.md  Makefile  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  install.conf  install.sh  tm-cleanup.sh  uninstall.sh
.github/workflows/: autotools.yml  release_tarball.yml
man/: tm-cleanup.sh.1.in
src/: tm-cleanup.sh.in
